# csv2graph-go-wasm

./: README.md
docs/: csv2graph.d.ts  package.json
go/: go.mod  main.go
go/plotter/: colors.go  plotter.go
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
static/: csv2graph.d.ts  csv2graph.js  csv2graph.wasm  csv2graph_bg.wasm  csv2graph_bg.wasm.d.ts  index.html  script.js  style.css
