# rust/Cargo.toml (修正版: default-features = false を削除)

[package]
name = "csv2graph_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# --- plotters の default-features = false を削除 ---
plotters = { version = "0.3.3", features = ["ttf", "bitmap_backend", "point_series"] } # default-features = false を削除
# --- 修正ここまで ---
plotters-bitmap = { version = "0.3.7", default-features = false } # こちらは false のままで良いはず
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png", "bmp"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6"
once_cell = "1"
ttf-parser = "0.15" # ttf feature が依存
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] } # Optional: ログ出力用

[features]
default = ["console_error_panic_hook"]