[package]
name    = "csv2graph_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ── 基盤 ────────────────────────────────────
wasm-bindgen = "0.2"

# ── 画像 & 描画 ─────────────────────────────
image       = { version = "0.25", default-features = false, features = ["png"] }
imageproc   = { version = "0.25", default-features = false } # rayon 無効

# ── フォント（imageproc と同じ ab_glyph 系） ─
ab_glyph    = "0.2"

# ── CSV / JSON / base64 ─────────────────────
csv                = "1.3"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde-wasm-bindgen = "0.6"
base64             = "0.21"

# ── 便利 ────────────────────────────────────
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
